@@ -589,6 +589,36 @@ Description: \n\r\
 When placed on an item, that item will be exempt from your systems loot policy.  The item will not be \
 deleted, corrupted, ruined, or otherwise affected by the policy, regardless of your ini file settings.
 
+PROP_ITEMSLOT=\
+Property   : Prop_ItemSlot\n\r\
+Targets    : ITEM\n\r\
+Parameters : (NUM=[SLOTS COUNT]) (TYPE=[STRING]) (REMOVEABLE=[TRUE/FALSE]) ; [XML]\n\r\
+Example    : NUM=4 TYPE=Gems REMOVEABLE=TRUE\n\r\
+Description: \n\r\
+When placed on an item, that item will have available slots into which other items, those \
+with the Prop_ItemSlotFiller property, can be PUT using the PUT command. When this is done, \
+the item with this property will gain the effect benefits of the other item in addition to \
+its own.\n\r\
+\n\r\
+The NUM parameter determines how many slots are available.  The TYPE parameter must match \
+the TYPE parameter from the Prop_ItemSlotFiller of the item being PUT.  The REMOVEABLE \
+property sets whether the items in the slots may be removed.  See also Prop_ItemSlotFiller.
+
+PROP_ITEMSLOTFILLER=\
+Property   : Prop_ItemSlotFiller\n\r\
+Targets    : ITEM\n\r\
+Parameters : (NUM=[SLOTS COUNT]) (TYPE=[STRING]) (SKIPS=[ID,...])\n\r\
+Example    : NUM=4 TYPE=Gems REMOVEABLE=TRUE\n\r\
+Description: \n\r\
+When placed on an item, that item will put able to be PUT, using the PUT command, into the \
+slots provided on an item with the Prop_ItemSlot property.  When this is done, the item into \
+which this item is PUT will gain all the effect benefits of this item.\n\r\
+\n\r\
+The NUM parameter determines how many slots this item takes up.  The TYPE parameter must match \
+the TYPE parameter from the Prop_ItemSlot of the item being PUT into.  The SKIPS \
+property is a comma delimited list of Ability IDs which should be ignored when determining which \
+effects on this item should be applied to the slotted item.
+
 PROP_ITEMTRANSPORTER=\
 Property   : Prop_ItemTransporter\n\r\
 Targets    : Rooms, MOBs, Items (Containers)\n\r\
